--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
 
             <!-- graphs -->
-            <!-- http://www.coding-dude.com/wp/html5/bar-chart-html/ -->
+            <!-- table method: http://www.coding-dude.com/wp/html5/bar-chart-html/ -->
             <div class="card graph1">
                 <div class="graph-container">
                     <div class="legend">
